# poirot

./: Cargo.toml  README.md  test_db_init.sqlite
academic_resources.db/data/: IDENTITY  LOG
src/: lib.rs  main.rs
src/database/: academicresourcemanager.rs  mod.rs  schema.rs
src/domain/: affiliation.rs  author.rs  mod.rs
test1_db.db/data/: 000010.sst  IDENTITY  LOG  LOG.old.1764462512561960  LOG.old.1764462527306436  MANIFEST-000018  OPTIONS-000022
test1_db_path_engine.db/data/: IDENTITY  LOG  OPTIONS-000007  OPTIONS-000009
test_db.db/: manifest
test_db.db/data/: 000010.sst  IDENTITY  LOG  LOG.old.1764462436081357  MANIFEST-000012  OPTIONS-000014
test_db_init.db/data/: IDENTITY  LOG
