[package]
name = "poirot"
version = "0.1.0"
edition = "2024"

[dependencies]

colorimetry = {version= "0.0.8"}
cozo = {version="0.7.6", features=["compact","minimal","storage-rocksdb","graph-algo","requests","io-uring"]}
log  = {version="0.4.28"}
env_logger = {version="0.11"}
rayon = "=1.10"  # otherwise graph-builder don't work
thiserror= {version="2.0.17"}

tokio = { version = "1.36", features = ["full"] }
reqwest = {version = "0.12.24", default-features= false,  features = ["json","rustls-tls"]  }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

fancy-regex = "0.16.2" 
async-trait = "0.1.78"